--- a/src/shared/ui/ImageModal/ImageModal.module.css
+++ b/src/shared/ui/ImageModal/ImageModal.module.css
@@ -4,6 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100%;
+    z-index: var(--z-index-image-modal);
 }
 
 .ImageModalDim {
